--- a/refresher/package.json
+++ b/refresher/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.17.1",
     "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
     "nodemon": "^1.19.4"
   }
 }
